--- a/pom.xml
+++ b/pom.xml
@@ -30,15 +30,48 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.jacoco</groupId>
+			<artifactId>jacoco-maven-plugin</artifactId>
+			<version>0.8.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
+
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.3</version>
+				<configuration>
+					<includes>
+						<include>com/**/*</include>
+					</includes>
+				</configuration>
+				<executions>
+					<execution>
+						<id>pre-test</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>post-test</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-
 
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -51,8 +84,10 @@
 					<suiteXmlFiles>
 						<!-- <suiteXmlFile>testNG/testNG.xml</suiteXmlFile> -->
 					</suiteXmlFiles>
+					<forkCount>1</forkCount>
 				</configuration>
 			</plugin>
+
 			<plugin>
 				<groupId>org.jvnet.maven-antrun-extended-plugin</groupId>
 				<artifactId>maven-antrun-extended-plugin</artifactId>
